# Chatbot-

./: .replit  README.md  app.py  messages.pot  models.py  pyproject.toml  replit.md  routes.py
attached_assets/: Pasted-BotFactory-Loyihasini-Replit-da-Amalga-Oshirish-Strukturasi-Ushbu-qo-llanma-sizning-rejangiz-asosida-1756974680624_1756974680625.txt
services/: ai_service.py  auth_service.py  broadcast_service.py  instagram_service.py  telegram_service.py  whatsapp_service.py
static/css/: style.css
static/js/: main.js
templates/: base.html  bot_create.html  bot_manage.html  dashboard.html  index.html  login.html  register.html
templates/admin/: dashboard.html
utils/: __init__.py  helpers.py
